--- a/CSS/Css1.css
+++ b/CSS/Css1.css
@@ -64,6 +64,8 @@ main {
   padding-top 50px;
   color:whitesmoke;
   background-color: lightblue;
+  font-size: 100px;
+  font-family: 'Times New Roman', Times, serif;
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAMAAAApB0NrAAAABlBMVEX///+pqalTpKl9AAAAAnRSTlMAGovxNEIAAAAdSURBVDjLY2AAAUaG4UYxDDsfjfp91O+jfqfE7wCzpQCw/dq+qQAAAABJRU5ErkJggg==");
 }
 
